# sdm

./: .gitignore  CMakeLists.txt  Makefile  README.MD  adddialog.cpp  adddialog.h  adddialog.ui  databasemanager.cpp  databasemanager.h  debug.cpp  debug.h  dm.rc  download.cpp  download.h  downloadManager.pro  downloadaswhole.cpp  downloadattributes.cpp  downloadattributes.h  downloadinfodialog.cpp  downloadinfodialog.h  downloadinfodialog.ui  downloadmodel.cpp  downloadmodel.h  downloadprocessor.cpp  downloadprocessor.h  downloadproperties.cpp  downloadproperties.h  downloadview.cpp  downloadview.h  enum.h  fetchheaders.cpp  fetchheaders.h  global.cpp  global.h  headerlist.cpp  headerlist.h  icons.qrc  localserver.cpp  localserver.h  main.cpp  (+23 more)
extension/: background.js  index.html  manifest.json  sdm_video_div.css  sdm_video_div.js
